# sample-agent-slim

./: .gitignore  README.md  env.example  mcp.json  pyproject.toml
docs/: local-dev.md  sample-agent-slim-guide.md
pa_sample_agent/: agent.py  agent_builder.py  config.py  log_config.py  model.py  slim_client.py  slim_interface.py
